--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,12 @@ body {
     background-color: #f5f6fa;
 }
 
+.app {
+    display: flex;
+    justify-content: space-evenly;
+    padding: 25px;
+}
+
 .app__header {
     display: flex;
     align-items: center;
@@ -13,13 +19,17 @@ body {
     margin-bottom: 20px;
 }
 
+.app__left {
+    float: 0.9;
+}
+
 .app__stats {
     display: flex;
     justify-content: space-between;
 }
 
-.app {
-    display: flex;
-    justify-content: space-evenly;
-    padding: 20px;
+@media (max-width: 990px) {
+    .app {
+        flex-direction: column;
+    }
 }
